--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.12.1",
         "axios": "^0.19",
+        "babel-plugin-module-resolver": "^4.0.0",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "laravel-mix-tailwind": "^0.1.1",
@@ -24,6 +25,7 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.4.3",
         "@inertiajs/inertia-react": "^0.3.2",
+        "@inertiajs/progress": "^0.1.2",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
