--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,3 +1,25 @@
 {
-    "plugins": ["@babel/plugin-syntax-dynamic-import"]
+    "plugins": [
+        "@babel/plugin-syntax-dynamic-import",
+        [
+            "module-resolver",
+            {
+                "root": ["./resources/js"],
+                "extensions": [
+                    ".ios.ts",
+                    ".android.ts",
+                    ".ts",
+                    ".ios.tsx",
+                    ".android.tsx",
+                    ".tsx",
+                    ".jsx",
+                    ".js",
+                    ".json"
+                ],
+                "alias": {
+                    "components": "./resources/js/components"
+                }
+            }
+        ]
+    ]
 }
