--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: deemples
+      MYSQL_DATABASE: shopdirectory
       MYSQL_USER: homestead
       MYSQL_PASSWORD: secret
       MYSQL_ROOT_PASSWORD: secret
