--- a/src/composer.json
+++ b/src/composer.json
@@ -27,7 +27,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.2.32"
+        }
     },
     "extra": {
         "laravel": {
@@ -49,6 +52,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "copy-env": "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
